--- a/package.json
+++ b/package.json
@@ -3,26 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://hridyansh68.github.io/MoneySplit",
-  "contributors": [{
-    "name" : "Rishabh Tripathi",
-    "email": "imrist@gmail.com",
-    "url" : "https://ristri.com"
-  },{
-    "name": "Hridyansh Sahu",
-    "email": "hridyanshsahu68@gmail.com",
-    "url": "http://hridyashsahu.com"
-  }],
+  "contributors": [
+    {
+      "name": "Rishabh Tripathi",
+      "email": "imrist@gmail.com",
+      "url": "https://ristri.com"
+    },
+    {
+      "name": "Hridyansh Sahu",
+      "email": "hridyanshsahu68@gmail.com",
+      "url": "http://hridyashsahu.com"
+    }
+  ],
   "dependencies": {
+    "material-ui": "^1.0.0-beta.23",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "typeface-roboto": "0.0.45"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy" : "npm run build&&gh-pages -d build"
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0",
