--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     }
   ],
   "dependencies": {
-    "material-ui": "^1.0.0-beta.23",
+    "muicss": "^0.9.32",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17",
-    "typeface-roboto": "0.0.45"
+    "react-icons": "^2.2.7",
+    "react-scripts": "1.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
