--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-dom-factories": "^1.0.2",
+    "react-selectize": "^3.0.1",
+    "react-transition-group": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
